force-app/main/default/objects/Account/fields/Account_Archive_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Archive_Notes__c</fullName>
    <description>Allows to archive notes from Ringlead</description>
    <inlineHelpText>Allows to archive notes from Ringlead</inlineHelpText>
    <label>Account Archive Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>