force-app/main/default/objects/Account/fields/Account_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Case_Safe_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Case Safe ID</label>
    <type>Text</type>
</CustomField>