force-app/main/default/objects/Account/fields/Account_Manager_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_TEXT__c</fullName>
    <formula>(Account_Manager__r.FirstName  &amp; &quot; &quot; &amp;  Account_Manager__r.LastName)</formula>
    <label>Account Manager (TEXT)</label>
    <type>Text</type>
</CustomField>