force-app/main/default/objects/Account/fields/Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_ID__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner ID</label>
    <type>Text</type>
</CustomField>