force-app/main/default/objects/Account/fields/Account_Owner_TEXT__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_TEXT__c</fullName>
    <formula>(Owner.FirstName  &amp; &quot; &quot; &amp;  Owner.LastName)</formula>
    <label>Account Owner (TEXT)</label>
    <type>Text</type>
</CustomField>