force-app/main/default/objects/Account/fields/Account_Owner_User_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_User_Region__c</fullName>
    <formula>TEXT( Owner.User_Region__c )</formula>
    <label>Account Owner User Region</label>
    <type>Text</type>
</CustomField>