force-app/main/default/objects/Account/fields/Account_Plan_Total__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Total__c</fullName>
    <inlineHelpText>The sum of all quotas assigned to this account</inlineHelpText>
    <label>Account Sales Target</label>
    <summarizedField>Account_Plan__c.Total_Quota__c</summarizedField>
    <summaryForeignKey>Account_Plan__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>