force-app/main/default/objects/Account/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <label>Account Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A+ (Top Client)</fullName>
            </value>
            <value>
                <fullName>A-  (Top Client, lower budget)</fullName>
            </value>
            <value>
                <fullName>B+  (Secondary Client, High))</fullName>
            </value>
            <value>
                <fullName>B- (Secondary, Low Budget)</fullName>
            </value>
            <value>
                <fullName>C (Opportunistic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>