force-app/main/default/objects/Account/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <description>Used for Reporting and Oppty Views</description>
    <formula>RecordType.Name</formula>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>