force-app/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <inlineHelpText>This is the region of the account owner</inlineHelpText>
    <label>Account Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>