force-app/main/default/objects/Account/fields/Account_Status2__c.field-meta.xml
<CustomField>
    <fullName>Account_Status2__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Former Client</fullName>
            </value>
            <value>
                <fullName>Prospect (related to Client)</fullName>
            </value>
            <value>
                <fullName>Prospect (related to Former Client)</fullName>
            </value>
            <value>
                <fullName>Client (thru Parent/Child/Sibling)</fullName>
            </value>
            <value>
                <fullName>Client (thru Agency)</fullName>
            </value>
            <value>
                <fullName>Former Client (thru Parent/Child/Sibling)</fullName>
            </value>
            <value>
                <fullName>Former Client (thru Agency)</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Active, Client</fullName>
                <isActive>false</isActive>
                <label>Active, Client</label>
            </value>
            <value>
                <fullName>Client, Active</fullName>
                <isActive>false</isActive>
                <label>Client, Active</label>
            </value>
            <value>
                <fullName>Client, Active, Client</fullName>
                <isActive>false</isActive>
                <label>Client, Active, Client</label>
            </value>
            <value>
                <fullName>Client, Client, Active</fullName>
                <isActive>false</isActive>
                <label>Client, Client, Active</label>
            </value>
            <value>
                <fullName>Client, Client, Active, Client</fullName>
                <isActive>false</isActive>
                <label>Client, Client, Active, Client</label>
            </value>
            <value>
                <fullName>Client, Client, Active, Client, Client, Active</fullName>
                <isActive>false</isActive>
                <label>Client, Client, Active, Client, Client, Active</label>
            </value>
            <value>
                <fullName>Client, Client, Lead</fullName>
                <isActive>false</isActive>
                <label>Client, Client, Lead</label>
            </value>
            <value>
                <fullName>Client, Client, Lead, Lead</fullName>
                <isActive>false</isActive>
                <label>Client, Client, Lead, Lead</label>
            </value>
            <value>
                <fullName>Client, Inactive</fullName>
                <isActive>false</isActive>
                <label>Client, Inactive</label>
            </value>
            <value>
                <fullName>Client, Lead</fullName>
                <isActive>false</isActive>
                <label>Client, Lead</label>
            </value>
            <value>
                <fullName>Client, Lead, Active</fullName>
                <isActive>false</isActive>
                <label>Client, Lead, Active</label>
            </value>
            <value>
                <fullName>Client, Lead, Lead</fullName>
                <isActive>false</isActive>
                <label>Client, Lead, Lead</label>
            </value>
            <value>
                <fullName>Client, Old</fullName>
                <isActive>false</isActive>
                <label>Client, Old</label>
            </value>
            <value>
                <fullName>Client, Prospect</fullName>
                <isActive>false</isActive>
                <label>Client, Prospect</label>
            </value>
            <value>
                <fullName>Client, Prospect, Inactive</fullName>
                <isActive>false</isActive>
                <label>Client, Prospect, Inactive</label>
            </value>
            <value>
                <fullName>Do not contact</fullName>
                <isActive>false</isActive>
                <label>Do not contact</label>
            </value>
            <value>
                <fullName>Do not contact, Not qualified</fullName>
                <isActive>false</isActive>
                <label>Do not contact, Not qualified</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>Lead</fullName>
                <isActive>false</isActive>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Lead, Client</fullName>
                <isActive>false</isActive>
                <label>Lead, Client</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>