force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Status is based on the Campaign Status of related opportunities.</description>
    <label>Account Status (TEMP)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Client</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>