force-app/main/default/objects/Account/fields/Account_Tag__c.field-meta.xml
<CustomField>
    <fullName>Account_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Account Cleanup</description>
    <inlineHelpText>Used in Account Cleanup</inlineHelpText>
    <label>Account Tag</label>
    <type>Checkbox</type>
</CustomField>