force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 4</fullName>
                <default>true</default>
                <label>Tier 4</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>UnTiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>