force-app/main/default/objects/Account/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <description>Show the number of Activities under this Account using DCLS</description>
    <label>Brand Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>