force-app/main/default/objects/Account/fields/Actual_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Renewal_Date__c</fullName>
    <description>The date at which the current contract has just ended. (End Date +1 Day)</description>
    <formula>Renewal_Date_Client__c + 1</formula>
    <inlineHelpText>The date at which the current contract has just ended. (End Date +1 Day)</inlineHelpText>
    <label>Actual Renewal Date (Client)</label>
    <type>Date</type>
</CustomField>