force-app/main/default/objects/Account/fields/Actual_Renewal_Date_Client_2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Renewal_Date_Client_2__c</fullName>
    <description>The date at which the current contract has just ended. (End Date +1 Day)</description>
    <formula>Actual_Renewal_Date__c</formula>
    <inlineHelpText>The date at which the current contract has just ended. (End Date +1 Day)</inlineHelpText>
    <label>Actual Renewal Date (Client) (2)</label>
    <type>Date</type>
</CustomField>