force-app/main/default/objects/Account/fields/Actvity_Count_CQ__c.field-meta.xml
<CustomField>
    <fullName>Actvity_Count_CQ__c</fullName>
    <label>Actvity Count CQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>