force-app/main/default/objects/Account/fields/Ad_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Ad_Manager_ID__c</fullName>
    <label>Ad Manager ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>