force-app/main/default/objects/Account/fields/Ad_Serving_CPM__c.field-meta.xml
<CustomField>
    <fullName>Ad_Serving_CPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Serving CPM</label>
    <type>Checkbox</type>
</CustomField>