force-app/main/default/objects/Account/fields/Agency_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Agency_Opp_Count__c</fullName>
    <label>Agency Opp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>