force-app/main/default/objects/Account/fields/Agency_Opp_Rev_Sum__c.field-meta.xml
<CustomField>
    <fullName>Agency_Opp_Rev_Sum__c</fullName>
    <label>Agency Opp Rev Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>