force-app/main/default/objects/Account/fields/Alexa_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Ranking__c</fullName>
    <label>Similarweb Ranking</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>