force-app/main/default/objects/Account/fields/Alt_Acct_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Acct_Name__c</fullName>
    <label>Alt Acct Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>