force-app/main/default/objects/Account/fields/Auto_Collections__c.field-meta.xml
<CustomField>
    <fullName>Auto_Collections__c</fullName>
    <label>Auto Collections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Channel_s</valueSetName>
    </valueSet>
</CustomField>