force-app/main/default/objects/Account/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renew?</label>
    <type>Checkbox</type>
</CustomField>