force-app/main/default/objects/Account/fields/Auto_Renew_Term__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Term__c</fullName>
    <label>Auto-Renew Term</label>
    <length>200</length>
    <type>Text</type>
</CustomField>