force-app/main/default/objects/Account/fields/Avg_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Avg_Deal_Size__c</fullName>
    <description>Account average Deal Size. Includes all opps. Automatically calculated.</description>
    <inlineHelpText>Account average Deal Size. Includes all opps. Automatically calculated.</inlineHelpText>
    <label>Avg. Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>