force-app/main/default/objects/Account/fields/Billing_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Billing_Attention_To__c</fullName>
    <description>Maps to Netsuite Customer Attention To (TDG)</description>
    <inlineHelpText>Enter the staff name of department to direct invoices attention.</inlineHelpText>
    <label>Billing Attention To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>