force-app/main/default/objects/Account/fields/Bottoms_Up_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bottoms_Up_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The account owner from the most recent bottoms up file</inlineHelpText>
    <label>Bottoms Up Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>