force-app/main/default/objects/Account/fields/Brand_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Brand_Opp_Count__c</fullName>
    <inlineHelpText>Count of Band Opportunities</inlineHelpText>
    <label>Brand Opp Total Count</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Verity, Open Market, Advertising, Video, Activation, Playground Attention Intelligence Platform</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>