force-app/main/default/objects/Account/fields/Buying_Orginzation__c.field-meta.xml
<CustomField>
    <fullName>Buying_Orginzation__c</fullName>
    <label>Buying Orginzation</label>
    <length>180</length>
    <type>Text</type>
</CustomField>