force-app/main/default/objects/Account/fields/Campaign_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Count__c</fullName>
    <description>Field populated using DLRS</description>
    <label>Campaign Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>