force-app/main/default/objects/Account/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity analytics</fullName>
            </value>
            <value>
                <fullName>AI sales assistant</fullName>
            </value>
            <value>
                <fullName>Attribution</fullName>
            </value>
            <value>
                <fullName>Content hosting and analytics</fullName>
            </value>
            <value>
                <fullName>Email analytics</fullName>
            </value>
            <value>
                <fullName>Forecasting and pipeline management</fullName>
            </value>
            <value>
                <fullName>Marketing operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>