force-app/main/default/objects/Account/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Apparel/Footwear</fullName>
            </value>
            <value>
                <fullName>Auto Manufacturers</fullName>
            </value>
            <value>
                <fullName>Auto Services</fullName>
            </value>
            <value>
                <fullName>Baby/Child Products</fullName>
            </value>
            <value>
                <fullName>Banking/Investing</fullName>
            </value>
            <value>
                <fullName>Beauty (hair, fragrance, cosmetics)</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Casinos</fullName>
            </value>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Convenience/Gas Station</fullName>
            </value>
            <value>
                <fullName>Credit cards</fullName>
            </value>
            <value>
                <fullName>Cruises</fullName>
            </value>
            <value>
                <fullName>Dealers</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Educational institutions</fullName>
            </value>
            <value>
                <fullName>Energy Producers (oil, gas)</fullName>
            </value>
            <value>
                <fullName>Energy Services</fullName>
            </value>
            <value>
                <fullName>eSports</fullName>
            </value>
            <value>
                <fullName>Fitness/Sporting Goods</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Food Delivery</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>