force-app/main/default/objects/Account/fields/celigo_sfnsio__Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Credit_Hold__c</fullName>
    <label>Credit Hold (IO)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>