force-app/main/default/objects/Account/fields/celigo_sfnsio__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Credit_Limit__c</fullName>
    <label>Credit Limit (IO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>