force-app/main/default/objects/Account/fields/celigo_sfnsio__Overdue_Balance__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Overdue_Balance__c</fullName>
    <label>Overdue Balance (IO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>