force-app/main/default/objects/Account/fields/celigo_sfnsio__Unbilled_Orders__c.field-meta.xml
<CustomField>
    <fullName>celigo_sfnsio__Unbilled_Orders__c</fullName>
    <label>Unbilled Orders (IO)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>