force-app/main/default/objects/Account/fields/Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Child_Count__c</fullName>
    <description>Displays the number of child accounts nested under this account</description>
    <inlineHelpText>Displays the number of child accounts nested under this account</inlineHelpText>
    <label>Child Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>