force-app/main/default/objects/Account/fields/Client_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Client_Auto_Renew__c</fullName>
    <label>Client Auto-Renew?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>