force-app/main/default/objects/Account/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <description>Used to indicate whether or not this client is willing/able to be a reference for GGS</description>
    <inlineHelpText>Used to indicate whether or not this client is willing/able to be a reference for GGS</inlineHelpText>
    <label>Client Reference?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>