force-app/main/default/objects/Account/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>One-Time Deal</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Covid Loss</fullName>
            </value>
            <value>
                <fullName>Renewed Late</fullName>
            </value>
            <value>
                <fullName>Renewed Early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>