force-app/main/default/objects/Account/fields/Client_Status_Details__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_Details__c</fullName>
    <description>To add context for the Client Status field</description>
    <inlineHelpText>To add context for the Client Status field</inlineHelpText>
    <label>Client Status Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>