force-app/main/default/objects/Account/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <inlineHelpText>This field must be set when Status = Open</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>