force-app/main/default/objects/Account/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Competitors</label>
    <type>TextArea</type>
</CustomField>