force-app/main/default/objects/Account/fields/Converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date__c</fullName>
    <inlineHelpText>If Account was created from a converted lead, what date did that occur?</inlineHelpText>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>