force-app/main/default/objects/Account/fields/Covered_by_Account_Owner_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Covered_by_Account_Owner_Last_30_Days__c</fullName>
    <description>Evaluates if the user tagged in the &apos;bottoms up owner&apos; field has tasks or events on this account within 30 days</description>
    <formula>Last_Bottom_up_Activity_Date__c &gt;= (TODAY()-30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates if the user tagged in the &apos;bottoms up owner&apos; field has tasks or events on this account within 30 days</inlineHelpText>
    <label>Covered by Account Owner Last 30 Days?</label>
    <type>Checkbox</type>
</CustomField>